--- a/languages/nl.po
+++ b/languages/nl.po
@@ -14,20 +14,20 @@ msgstr ""
 
 # Copyright (C) 2020 devbackroom
 # This file is distributed under the same license as the image-byline package.
-msgid "Byline/Credit"
-msgstr "Byline / krediet"
+msgid "Byline Credit"
+msgstr "Byline krediet"
 
-msgid "Byline/Credit Link"
-msgstr "Byline / krediet link"
+msgid "Byline Credit Link"
+msgstr "Byline kredietlink"
 
-msgid "Image Byline"
-msgstr "Afbeeldings byline"
+msgid "Image and Media Byline Credits"
+msgstr "Afbeeldingen en Media Byline Krediet"
 
-msgid "General"
-msgstr "Algemeen"
+msgid "General Options"
+msgstr "Algemene opties"
 
-msgid "Prefix byline/credit"
-msgstr "Voorvoegsel byline / krediet"
+msgid "Prefix byline credit"
+msgstr "Voorvoegsel byline krediet"
 
 msgid "Search suggestions role"
 msgstr "Rol zoeksuggesties"
@@ -35,33 +35,14 @@ msgstr "Rol zoeksuggesties"
 msgid "Search suggestions"
 msgstr "Zoeksuggesties"
 
-msgid "A short label to show before the byline/credit e.g. Source:."
-msgstr "Een kort label om te tonen voor de byline / krediet bijv. Bron:."
+msgid "A short label to show before the byline credit e.g. Source:."
+msgstr "Een kort label om te tonen voor het byline krediet bijv. Bron:."
 
-msgid ""
-"You can use a user role to automatically get a list of sources to show in "
-"the Media Library Byline/Credit field suggestions. Leave this field blank if "
-"you just want to use the simple list."
-msgstr ""
-"U kunt een gebruikersrol gebruiken om automatisch een lijst met bronnen te "
-"krijgen om weer te geven in de mediatheek Byline / Credit veldsuggesties. "
-"Laat dit veld leeg als u alleen de eenvoudige lijst wilt gebruiken."
+msgid "You can use a user role to automatically get a list of sources to show in the Media Library Byline Credit field suggestions. Leave this field blank if you just want to use the simple list."
+msgstr "U kunt een gebruikersrol gebruiken om automatisch een lijst met bronnen te krijgen om weer te geven in de veldsuggesties van Mediatheek Byline Credit. Laat dit veld leeg als u alleen de eenvoudige lijst wilt gebruiken."
 
-msgid ""
-"A list of sources to show in the Media Library Byline/Credit field "
-"suggestions. Put each value on a new line. Leave this field blank if you "
-"just want to use a user role for your suggestions."
-msgstr ""
-"Een lijst met bronnen om weer te geven in de mediatheek Byline / Credit "
-"veldsuggesties. Zet elke waarde op een nieuwe regel. Laat dit veld leeg als "
-"u alleen een gebruikersrol wilt gebruiken voor uw suggesties."
+msgid "A list of sources to show in the Media Library Byline Credit field suggestions. Put each value on a new line. Leave this field blank if you just want to use a user role for your suggestions."
+msgstr "Een lijst met bronnen om weer te geven in de suggesties van het veld Byline Credit van Media Library. Zet elke waarde op een nieuwe regel. Laat dit veld leeg als u alleen een gebruikersrol wilt gebruiken voor uw suggesties."
 
-msgid ""
-"Here you can configure your options for the Image Byline plugin. All the "
-"settings are optional."
-msgstr ""
-"Hier kunt u uw opties configureren voor de Image Byline plugin. Alle "
-"instellingen zijn optioneel."
-
-msgid "Image Byline Options"
-msgstr "Image Byline Opties"
+msgid "Here you can configure your options for the Image and Media Byline Credits plugin. All the settings are optional."
+msgstr "Hier kunt u uw opties configureren voor de plug-in Afbeeldingen en Media Byline Krediet. Alle instellingen zijn optioneel."
